Update user activation build

--- a/user-activation/translations/es_ES.json
+++ b/user-activation/translations/es_ES.json
@@ -108,11 +108,12 @@
   "4qkP5F": "Cultivo",
   "BcfF1": "retirar",
   "3N2LLn": "Su navegador no soporta la etiqueta de vídeo.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "por noche",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "por hora",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "cada",
   "2lFioe": "Completitud del Perfil",
   "36KmVN": "Error:",
@@ -173,6 +174,10 @@
   "3s7XTl": "Política de uso aceptable",
   "45kim7": "Aprenda más sobre el origen",
   "2CIGBu": "Crea tu propio mercado",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "Mis Compras",
   "dztC6": "Compras",
   "3rmh0I": "Mis Anuncios",
@@ -427,7 +432,7 @@
   "1aItYz": "Verify your Google Profile",
   "2peucP": "Crear un listado",
   "2QerxF": "Comprar un listado",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "Campaña de enero de 2019",
     "growth.jan2019.short_name": "Ene 2019",
     "growth.feb2019.name": "Campaña de febrero de 2019",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "Abr 2019",
     "growth.may2019.name": "May 2019 Campaign",
     "growth.may2019.short_name": "May 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "Correo electrónico verificado y perfil de origen",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Purchase 2 all-access annual passes to 3lau events",
     "growth.purchase.experience.details": "Válido por un año después de la compra",
     "growth.purchase.art.title": "Compra el retrato Vitalik AR por Trevor Jones",
-    "growth.purchase.art.details": "Solo 1 pieza original disponible."
+    "growth.purchase.art.details": "Solo 1 pieza original disponible.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "Vender un listado",
   "4rFkyn": "Invita a tus amigos a unirse a Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "Ajustes",
   "1lZQR5": "Ajustes",
   "m1nCP": "Idioma",
-  "1F3Mvq": "Por favor haga una selección de la lista a continuación.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Moneda",
   "4BuhN1": "Por favor haga una selección en la lista a continuación.",
-  "3p4HGb": "Notificaciones del navegador",
-  "cbWZ9": "Habilitar las notificaciones del navegador a continuación.",
-  "2s8fOg": "Habilitar",
-  "2ajQKU": "Las notificaciones del navegador están habilitadas.",
-  "23S1SF": "Servidor de descubrimiento",
-  "fYa5D": "Por favor, introduzca la URL a continuación. Deje en blanco para consultar directamente la cadena de bloques. La funcionalidad de búsqueda se deshabilitará si no se utiliza un servidor de descubrimiento.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "Puerta de enlace IPFS",
-  "2uOnid": "Por favor, introduzca la URL a continuación.",
-  "41yLzv": "Proveedor Web3",
-  "3cw205": "Por favor, introduzca la URL a continuación.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "Servidor Puente",
-  "14EHcW": "Por favor, introduzca la URL a continuación.",
+  "23S1SF": "Servidor de descubrimiento",
+  "nqaAu": "Relayer Server",
   "pT9j": "Retenida",
   "NrhOS": "Liberar",
   "QUO1v": "Cantidad",
