--- a/user-activation/translations/it_IT.json
+++ b/user-activation/translations/it_IT.json
@@ -108,11 +108,12 @@
   "4qkP5F": "Crop",
   "BcfF1": "Rimuovere",
   "3N2LLn": "Il tuo browser non supporta il tag video.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "per notte",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "all'ora",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "ogni",
   "2lFioe": "Forza del Profilo",
   "36KmVN": "Errore:",
@@ -173,6 +174,10 @@
   "3s7XTl": "Politica di Utilizzo Accettabile",
   "45kim7": "Ulteriori informazioni su Origin",
   "2CIGBu": "Crea il tuo Marketplace",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "I miei acquisti",
   "dztC6": "Acquisti",
   "3rmh0I": "I miei annunci",
@@ -427,7 +432,7 @@
   "1aItYz": "Verifica il tuo profilo Google",
   "2peucP": "Crea un annuncio",
   "2QerxF": "Acquista un annuncio",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "Apr 2019",
     "growth.may2019.name": "Campagna di Maggio 2019",
     "growth.may2019.short_name": "Maggio 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Due verifiche del profilo",
     "growth.profile.requirement": "Nome e foto del profilo",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Acquista 2 pass annuali per tutti gli accessi agli eventi 3lau",
     "growth.purchase.experience.details": "Valido per un anno solare dopo l'acquisto",
     "growth.purchase.art.title": "Acquista il ritratto Vitalik AR di Trevor Jones",
-    "growth.purchase.art.details": "Solo 1 pezzo originale disponibile."
+    "growth.purchase.art.details": "Solo 1 pezzo originale disponibile.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "Vendi un Articolo",
   "4rFkyn": "Invita gli Amici ad unirsi ad Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "impostazioni",
   "1lZQR5": "impostazioni",
   "m1nCP": "Lingua",
-  "1F3Mvq": "Si prega di fare una selezione dalla lista qui sotto.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Valuta",
   "4BuhN1": "Si prega di fare una selezione dalla lista qui sotto.",
-  "3p4HGb": "Notifiche del browser",
-  "cbWZ9": "Abilita le notifiche del browser di seguito.",
-  "2s8fOg": "Abilitare",
-  "2ajQKU": "Le notifiche del browser sono abilitate.",
-  "23S1SF": "Discovery Server",
-  "fYa5D": "Si prega di inserire l'URL qui sotto. Lascia vuoto per interrogare direttamente la blockchain. La funzionalità di ricerca verrà disabilitata se non viene utilizzato alcun server di rilevamento.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "Gateway IPFS",
-  "2uOnid": "Si prega di inserire l'URL qui sotto.",
-  "41yLzv": "Provider Web3",
-  "3cw205": "Si prega di inserire l'URL qui sotto.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "Bridge Server",
-  "14EHcW": "Si prega di inserire l'URL qui sotto.",
+  "23S1SF": "Discovery Server",
+  "nqaAu": "Relayer Server",
   "pT9j": "Trattenuto",
   "NrhOS": "Rilasciato",
   "QUO1v": "Importo",
