--- a/user-activation/translations/ko_KR.json
+++ b/user-activation/translations/ko_KR.json
@@ -108,11 +108,12 @@
   "4qkP5F": "잘라내기",
   "BcfF1": "제거",
   "3N2LLn": "귀하의 브라우저가 비디오 태그를 지원하지 않습니다.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "1 박당",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "시간당",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "각",
   "2lFioe": "프로필 영향력",
   "36KmVN": "오류:",
@@ -173,6 +174,10 @@
   "3s7XTl": "이용정책",
   "45kim7": "오리진(Origin) 에 대해 더 자세히 알아보기",
   "2CIGBu": "나만의 마켓 플레이스 만들기",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "나의 구매 현황",
   "dztC6": "구매 목록",
   "3rmh0I": "내 목록",
@@ -427,7 +432,7 @@
   "1aItYz": "구글(Google) 프로필을 인증해주세요",
   "2peucP": "상품 목록 만들기",
   "2QerxF": "상품 구매",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "2019 년 1 월 캠페인",
     "growth.jan2019.short_name": "2019 년 1 월",
     "growth.feb2019.name": "2019 년 2 월 캠페인",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "2019 년 4 월",
     "growth.may2019.name": "2019 년 5 월 캠페인",
     "growth.may2019.short_name": "2019년 5월",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "인증된 이메일 및 오리진 프로필",
     "growth.two.attestations.requirement": "두 개의 프로필 확인",
     "growth.profile.requirement": "프로필 이름 및 사진",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "3lau 이벤트에 참여할 수 있는 올 엑세스 연간 패스 2장을 구매해보세요.",
     "growth.purchase.experience.details": "구입 후 1 년 동안 유효합니다.",
     "growth.purchase.art.title": "트레버 존스(Trevor Jones) 의 Vitalik AR Portrait를 구입 해보세요",
-    "growth.purchase.art.details": "구매 가능한 원작은 오직 1작품 밖에 없습니다"
+    "growth.purchase.art.details": "구매 가능한 원작은 오직 1작품 밖에 없습니다",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "상품 판매",
   "4rFkyn": "당신의 친구를 오리진(Origin) 에 초대해주세요.",
@@ -840,21 +877,16 @@
   "gLVF0": "설정",
   "1lZQR5": "설정",
   "m1nCP": "언어",
-  "1F3Mvq": "아래 목록에서 선택해주세요.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "통화",
   "4BuhN1": "아래 상품 목록에서 선택해주세요.",
-  "3p4HGb": "브라우저 알림",
-  "cbWZ9": "아래 브라우저 알림을 사용하십시오.",
-  "2s8fOg": "사용가능",
-  "2ajQKU": "브라우저 알림이 사용됩니다.",
-  "23S1SF": "검색 서버",
-  "fYa5D": "아래에 URL을 입력해주세요. 블랭크를 직접 쿼리하려면 비워 두십시오. 검색 서버를 사용하지 않으면 검색 기능이 비활성화됩니다.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS 게이트웨이",
-  "2uOnid": "아래에 URL을 입력하십시오.",
-  "41yLzv": "Web3 Provider",
-  "3cw205": "아래에 URL을 입력하십시오.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "연결 서버",
-  "14EHcW": "아래에 URL을 입력하십시오.",
+  "23S1SF": "검색 서버",
+  "nqaAu": "Relayer Server",
   "pT9j": "유지함(Held)",
   "NrhOS": "출시 됨",
   "QUO1v": "양",
