--- a/user-activation/translations/zh_CN.json
+++ b/user-activation/translations/zh_CN.json
@@ -108,11 +108,12 @@
   "4qkP5F": "裁剪",
   "BcfF1": "删除",
   "3N2LLn": "您的浏览器不支持视频标记。",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "每晚",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "每小时",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "一件",
   "2lFioe": "个人档案完成度",
   "36KmVN": "错误:",
@@ -173,6 +174,10 @@
   "3s7XTl": "可接受的使用政策",
   "45kim7": "了解更多关于 Origin 的信息",
   "2CIGBu": "创建您自己的市场",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "已购商品",
   "dztC6": "已购商品",
   "3rmh0I": "我的列表",
@@ -427,7 +432,7 @@
   "1aItYz": "验证您的谷歌账号",
   "2peucP": "创建列表",
   "2QerxF": "购买一件商品",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "2019年1月活动",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月活动",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "2019年4月",
     "growth.may2019.name": "2019年5月活动",
     "growth.may2019.short_name": "2019年5月",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "已验证电子邮件和 Origin 个人资料",
     "growth.two.attestations.requirement": "两项身份认证",
     "growth.profile.requirement": "照片和姓名",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "购买 2 张所有美国音乐制作人 3lau 的活动的全年通行证",
     "growth.purchase.experience.details": "有效期一个日历年，从完成购买时间开始算起。",
     "growth.purchase.art.title": "购买 Trevor Jones 的 Vitalik AR Portrait 艺术品",
-    "growth.purchase.art.details": "原件只有一幅。"
+    "growth.purchase.art.details": "原件只有一幅。",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "售卖一件商品",
   "4rFkyn": "邀请好友加入 Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "设置",
   "1lZQR5": "设置",
   "m1nCP": "语言",
-  "1F3Mvq": "请从下面的列表中进行选择。",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "货币",
   "4BuhN1": "请从下面的列表中进行选择。",
-  "3p4HGb": "浏览器通知",
-  "cbWZ9": "在下面启用浏览器通知",
-  "2s8fOg": "启用",
-  "2ajQKU": "浏览器通知已启用。",
-  "23S1SF": "Discovery Server",
-  "fYa5D": "请输入以下网址。留空以直接查询区块链。如果未使用任何发现服务器，则将禁用搜索功能。",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS网关",
-  "2uOnid": "请输入以下网址。",
-  "41yLzv": "Web3提供商",
-  "3cw205": "请输入以下网址。",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "桥接服务器",
-  "14EHcW": "请输入以下网址。",
+  "23S1SF": "Discovery Server",
+  "nqaAu": "Relayer Server",
   "pT9j": "托管中",
   "NrhOS": "已释放",
   "QUO1v": "金额",
