--- a/user-activation/translations/el_GR.json
+++ b/user-activation/translations/el_GR.json
@@ -108,11 +108,12 @@
   "4qkP5F": "Καλλιέργεια",
   "BcfF1": "Αφαιρώ",
   "3N2LLn": "Το πρόγραμμα περιήγησης που χρησιμοποιείτε δεν υποστηρίζει την ετικέτα βίντεο.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "ανά διανυκτέρευση",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "ανά ώρα",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "καθε",
   "2lFioe": "Ισχύς Προφίλ",
   "36KmVN": "Error:",
@@ -173,6 +174,10 @@
   "3s7XTl": "Πολιτική Αποδεκτής Χρήσης",
   "45kim7": "Μάθετε περισσότερα για την προέλευση",
   "2CIGBu": "Δημιουργήστε τη δική σας αγορά",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "Οι αγορές μου",
   "dztC6": "Αγορές",
   "3rmh0I": "Οι καταχωρήσεις μου",
@@ -427,7 +432,7 @@
   "1aItYz": "Verify your Google Profile",
   "2peucP": "Δημιουργία μιας λίστας",
   "2QerxF": "Αγοράστε μια λίστα",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "Ιανουάριος 2019 Εκστρατεία",
     "growth.jan2019.short_name": "Ιαν 2019",
     "growth.feb2019.name": "Φεβρουάριος 2019 Εκστρατεία",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "Απρίλιος 2019",
     "growth.may2019.name": "May 2019 Campaign",
     "growth.may2019.short_name": "May 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "Επαληθευμένο προφίλ email και προέλευσης",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Purchase 2 all-access annual passes to 3lau events",
     "growth.purchase.experience.details": "Valid for one calendar year after purchase",
     "growth.purchase.art.title": "Purchase the Vitalik AR Portrait by Trevor Jones",
-    "growth.purchase.art.details": "Only 1 original piece available."
+    "growth.purchase.art.details": "Only 1 original piece available.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "Πωλήστε μια λίστα",
   "4rFkyn": "Invite Friends to Join Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "Ρυθμίσεις",
   "1lZQR5": "Ρυθμίσεις",
   "m1nCP": "Language",
-  "1F3Mvq": "Κάντε μια επιλογή από την παρακάτω λίστα.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Currency",
   "4BuhN1": "Please make a selection from the list below.",
-  "3p4HGb": "Browser Notifications",
-  "cbWZ9": "Ενεργοποιήστε τις ειδοποιήσεις του προγράμματος περιήγησης παρακάτω.",
-  "2s8fOg": "επιτρέπω",
-  "2ajQKU": "Οι ειδοποιήσεις περιηγητή είναι ενεργοποιημένες.",
-  "23S1SF": "Διακομιστής ανακάλυψης",
-  "fYa5D": "Εισαγάγετε την παρακάτω διεύθυνση URL. Αφήστε κενό για να ερωτήσετε απευθείας το blockchain. Η λειτουργία αναζήτησης θα απενεργοποιηθεί εάν δεν χρησιμοποιείται εξυπηρετητής εντοπισμού.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS Gateway",
-  "2uOnid": "Εισαγάγετε την παρακάτω διεύθυνση URL.",
-  "41yLzv": "Web3 Provider",
-  "3cw205": "Εισαγάγετε την παρακάτω διεύθυνση URL.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "Γέφυρα Διακομιστή",
-  "14EHcW": "Εισαγάγετε την παρακάτω διεύθυνση URL.",
+  "23S1SF": "Διακομιστής ανακάλυψης",
+  "nqaAu": "Relayer Server",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
