--- a/user-activation/translations/ja_JP.json
+++ b/user-activation/translations/ja_JP.json
@@ -108,11 +108,12 @@
   "4qkP5F": "トリミング",
   "BcfF1": "削除",
   "3N2LLn": "お使いのブラウザはビデオタグをサポートしていません。",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "per night",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "per hour",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "each",
   "2lFioe": "プロフィールレベル",
   "36KmVN": "Error:",
@@ -173,6 +174,10 @@
   "3s7XTl": "利用規定",
   "45kim7": "Originの詳細を見る",
   "2CIGBu": "自分のマーケットプレイスを作成する",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "My Purchases",
   "dztC6": "Purchases",
   "3rmh0I": "私の掲載情報",
@@ -427,7 +432,7 @@
   "1aItYz": "Verify your Google Profile",
   "2peucP": "掲載情報を作成する。",
   "2QerxF": "購入する",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "2019年4月",
     "growth.may2019.name": "May 2019 Campaign",
     "growth.may2019.short_name": "May 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
     "growth.two.attestations.requirement": "２つのプロフィール認証",
     "growth.profile.requirement": "プロフィール名と写真",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "3lauイベントへの年間パスを２つ購入する",
     "growth.purchase.experience.details": "購入後1年有効",
     "growth.purchase.art.title": "Purchase the Vitalik AR Portrait by Trevor Jones",
-    "growth.purchase.art.details": "Only 1 original piece available."
+    "growth.purchase.art.details": "Only 1 original piece available.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "販売する",
   "4rFkyn": "友達をOriginに招待する",
@@ -840,21 +877,16 @@
   "gLVF0": "設定",
   "1lZQR5": "設定",
   "m1nCP": "Language",
-  "1F3Mvq": "以下のリストから選択してください。",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Currency",
   "4BuhN1": "Please make a selection from the list below.",
-  "3p4HGb": "Browser Notifications",
-  "cbWZ9": "下記のブラウザ通知を有効にします。",
-  "2s8fOg": "有効にする",
-  "2ajQKU": "ブラウザ通知が有効になります。",
-  "23S1SF": "検出サーバー",
-  "fYa5D": "下記のURLを入力してください。ブロックチェーンを直接クエリするには、空白のままにします。検出サーバーが使用されていない場合、検索機能は無効になります。",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS ゲートウェイ",
-  "2uOnid": "下記のURLを入力してください。",
-  "41yLzv": "Web3プロバイダー",
-  "3cw205": "下記のURLを入力してください。",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "ブリッジサーバー",
-  "14EHcW": "下記のURLを入力してください。",
+  "23S1SF": "検出サーバー",
+  "nqaAu": "Relayer Server",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
