--- a/user-activation/translations/ru_RU.json
+++ b/user-activation/translations/ru_RU.json
@@ -108,11 +108,12 @@
   "4qkP5F": "урожай",
   "BcfF1": "Удалить",
   "3N2LLn": "Ваш браузер не поддерживает видео тег.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "за ночь",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "в час",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "каждый",
   "2lFioe": "Сила профиля",
   "36KmVN": "Ошибка:",
@@ -173,6 +174,10 @@
   "3s7XTl": "Политика допустимого использования",
   "45kim7": "Узнайте больше о происхождении",
   "2CIGBu": "Создайте свой собственный рынок",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "Мои покупки",
   "dztC6": "Покупки",
   "3rmh0I": "Мои объявления",
@@ -427,7 +432,7 @@
   "1aItYz": "Подтвердите свой профиль Google",
   "2peucP": "Создать объявление",
   "2QerxF": "Купить листинг",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "Январь 2019 Кампания",
     "growth.jan2019.short_name": "Январь 2019",
     "growth.feb2019.name": "Февраль 2019 Кампания",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "Апрель 2019",
     "growth.may2019.name": "Компания в мае 2019",
     "growth.may2019.short_name": "Май 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "Подтвержденный адрес электронной почты и Происхождение",
     "growth.two.attestations.requirement": "Два подтверждения в профиле",
     "growth.profile.requirement": "Имя и фотография в профиле",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Купите 2 годовых пропуска с полным доступом на мероприятия 3lau",
     "growth.purchase.experience.details": "Действительно в течение одного календарного года после покупки",
     "growth.purchase.art.title": "Купить портрет Vitalik AR от Тревора Джонса",
-    "growth.purchase.art.details": "Доступен только 1 оригинал."
+    "growth.purchase.art.details": "Доступен только 1 оригинал.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "Продать объявление",
   "4rFkyn": "Пригласите друзей в Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "настройки",
   "1lZQR5": "настройки",
   "m1nCP": "Язык",
-  "1F3Mvq": "Пожалуйста, сделайте выбор из списка ниже.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Валюта",
   "4BuhN1": "Пожалуйста, сделайте выбор из списка ниже.",
-  "3p4HGb": "Уведомления в браузере",
-  "cbWZ9": "Включить уведомления браузера ниже.",
-  "2s8fOg": "включить",
-  "2ajQKU": "Уведомления браузера включены.",
-  "23S1SF": "Discovery Server",
-  "fYa5D": "Пожалуйста, введите URL ниже. Оставьте пустым, чтобы напрямую запросить блокчейн. Функция поиска будет отключена, если сервер обнаружения не используется.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS-шлюз",
-  "2uOnid": "Пожалуйста, введите URL ниже.",
-  "41yLzv": "Веб3 провайдер",
-  "3cw205": "Пожалуйста, введите URL ниже.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "Сетевой мост",
-  "14EHcW": "Пожалуйста, введите URL ниже.",
+  "23S1SF": "Discovery Server",
+  "nqaAu": "Relayer Server",
   "pT9j": "Проведён",
   "NrhOS": "Выпущен",
   "QUO1v": "Количество",
