--- a/user-activation/translations/th_TH.json
+++ b/user-activation/translations/th_TH.json
@@ -108,11 +108,12 @@
   "4qkP5F": "พืชผล",
   "BcfF1": "เอาออก",
   "3N2LLn": "เบราว์เซอร์ของคุณไม่รองรับแท็กวิดีโอ",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "per night",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "per hour",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "each",
   "2lFioe": "รายละเอียดความแข็งแกร่ง",
   "36KmVN": "Error:",
@@ -173,6 +174,10 @@
   "3s7XTl": "นโยบายการใช้งานที่ยอมรับได้",
   "45kim7": "เรียนรู้เพิ่มเติมเกี่ยวกับ Origin",
   "2CIGBu": "สร้างตลาดของคุณเอง",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "My Purchases",
   "dztC6": "Purchases",
   "3rmh0I": "รายการของฉัน",
@@ -427,7 +432,7 @@
   "1aItYz": "Verify your Google Profile",
   "2peucP": "สร้างรายชื่อ",
   "2QerxF": "ซื้อรายชื่อ",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "แคมเปญมกราคม 2562",
     "growth.jan2019.short_name": "ม.ค. 2019",
     "growth.feb2019.name": "แคมเปญกุมภาพันธ์ 2019",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "เม.ย. 2562",
     "growth.may2019.name": "May 2019 Campaign",
     "growth.may2019.short_name": "May 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "ยืนยันอีเมลและโปรไฟล์ Origin แล้ว",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Purchase 2 all-access annual passes to 3lau events",
     "growth.purchase.experience.details": "Valid for one calendar year after purchase",
     "growth.purchase.art.title": "Purchase the Vitalik AR Portrait by Trevor Jones",
-    "growth.purchase.art.details": "Only 1 original piece available."
+    "growth.purchase.art.details": "Only 1 original piece available.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "ขายรายชื่อ",
   "4rFkyn": "Invite Friends to Join Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "การตั้งค่า",
   "1lZQR5": "การตั้งค่า",
   "m1nCP": "Language",
-  "1F3Mvq": "โปรดเลือกจากรายการด้านล่าง",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Currency",
   "4BuhN1": "Please make a selection from the list below.",
-  "3p4HGb": "Browser Notifications",
-  "cbWZ9": "เปิดใช้งานการแจ้งเตือนของเบราว์เซอร์ด้านล่าง",
-  "2s8fOg": "ทำให้สามารถ",
-  "2ajQKU": "เปิดใช้งานการแจ้งเตือนของเบราว์เซอร์",
-  "23S1SF": "เซิร์ฟเวอร์การค้นพบ",
-  "fYa5D": "กรุณาใส่ URL ด้านล่าง เว้นว่างไว้เพื่อสอบถาม blockchain โดยตรง ฟังก์ชั่นการค้นหาจะปิดใช้งานหากไม่ใช้เซิร์ฟเวอร์การค้นหา",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "IPFS Gateway",
-  "2uOnid": "กรุณาใส่ URL ด้านล่าง",
-  "41yLzv": "ผู้ให้บริการ Web3",
-  "3cw205": "กรุณาใส่ URL ด้านล่าง",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "เซิร์ฟเวอร์บริดจ์",
-  "14EHcW": "กรุณาใส่ URL ด้านล่าง",
+  "23S1SF": "เซิร์ฟเวอร์การค้นพบ",
+  "nqaAu": "Relayer Server",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
