--- a/user-activation/translations/vi_VN.json
+++ b/user-activation/translations/vi_VN.json
@@ -108,11 +108,12 @@
   "4qkP5F": "Mùa vụ",
   "BcfF1": "Tẩy",
   "3N2LLn": "Trình duyệt của bạn không hỗ trợ thẻ video.",
-  "2AnmwX": "{content}{=per night}",
-  "bqUAq": "per night",
-  "3lUadB": "{content}{=per hour}",
-  "44FA1I": "per hour",
-  "29cyQe": "{content}{=each}",
+  "4wUbJF": "Earn",
+  "1UrIqq": "{content}{=/ night}",
+  "u97bh": "/ night",
+  "2QPUCL": "{content}{=/ hour}",
+  "9aojz": "/ hour",
+  "2WMlCu": "{content}{=each}",
   "44K5Pg": "each",
   "2lFioe": "Sức mạnh của hồ sơ",
   "36KmVN": "Error:",
@@ -173,6 +174,10 @@
   "3s7XTl": "Sự cho phép của chính trị",
   "45kim7": "Tìm hiểu thêm về nguồn gốc",
   "2CIGBu": "Tạo thị trường của riêng bạn",
+  "Ai99c": "Get the Origin Marketplace App",
+  "5quda": "You currently don't have a crypto wallet, which is necessary to buy and sell on Origin.",
+  "1DbD6O": "Scan this QR code to download our marketplace app.",
+  "3vT6lK": "Open App",
   "1figug": "My Purchases",
   "dztC6": "Purchases",
   "3rmh0I": "Danh sách của tôi",
@@ -427,7 +432,7 @@
   "1aItYz": "Verify your Google Profile",
   "2peucP": "Tạo một danh sách",
   "2QerxF": "Mua một danh sách",
-  "1oCjLk": {
+  "5pdpS": {
     "growth.jan2019.name": "Chiến dịch tháng 1 năm 2019",
     "growth.jan2019.short_name": "Tháng 1 năm 2019",
     "growth.feb2019.name": "Chiến dịch tháng 2 năm 2019",
@@ -438,6 +443,8 @@
     "growth.apr2019.short_name": "Tháng 4 năm 2019",
     "growth.may2019.name": "May 2019 Campaign",
     "growth.may2019.short_name": "May 2019",
+    "growth.june2019.name": "June 2019 Campaign",
+    "growth.june2019.short_name": "June 2019",
     "growth.profile.and.email.requirement": "Email được xác minh và hồ sơ gốc",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -453,7 +460,37 @@
     "growth.purchase.experience.title": "Purchase 2 all-access annual passes to 3lau events",
     "growth.purchase.experience.details": "Valid for one calendar year after purchase",
     "growth.purchase.art.title": "Purchase the Vitalik AR Portrait by Trevor Jones",
-    "growth.purchase.art.details": "Only 1 original piece available."
+    "growth.purchase.art.details": "Only 1 original piece available.",
+    "growth.purchase.listing624.title": "Book an apartment in San Francisco",
+    "growth.purchase.listing679.title": "Book an apartment in Venice, Italy",
+    "growth.purchase.listing683.title": "Book a studio in Milan, Italy",
+    "growth.purchase.listing763.title": "Book an apartment in Rome, Italy",
+    "growth.purchase.listing1556.title": "Book an apartment in Puerto de la Cruz, Tenerife",
+    "growth.purchase.listing2718.title": "Book an apartment in Maneggio, Italy",
+    "growth.purchase.listing2237.title": "Book an apartment in Vatican, Italy",
+    "growth.purchase.listing2781.title": "Book an apartment in Trastevere, Italy",
+    "growth.purchase.listing2783.title": "Book a luxury apartment in Venice, Italy",
+    "growth.purchase.listing335.title": "Purchase Ethereum hologram animated art",
+    "growth.purchase.listing297.title": "Purchase ETH hologram",
+    "growth.purchase.listing319.title": "Purchase ethEra and U",
+    "growth.purchase.listing320.title": "Purchase ethEra and Terra",
+    "growth.purchase.listing242.title": "Purchase ethEra, limited edition",
+    "growth.purchase.listing289.title": "Purchase The Bear, limited edition",
+    "growth.purchase.listing281.title": "Purchase Satoshi, limited edition",
+    "growth.purchase.listing450.title": "Purchase Crypto Bull art",
+    "growth.purchase.listing359.title": "Purchase Ethereum art",
+    "growth.purchase.listing477.title": "Purchase a ZoidPay cap",
+    "growth.purchase.listing254.title": "Purchase an Origin spaceman shirt",
+    "growth.purchase.listing255.title": "Purchase a HODL shirt",
+    "growth.purchase.listing2799.title": "Purchase a ETHCon Korea shirt",
+    "growth.purchase.listing639.title": "Purchase an Origin cap",
+    "growth.purchase.listing2553.title": "Purchase a $25 Amazon Gift Card",
+    "growth.purchase.listing2804.title": "Purchase a $25 iTunes Gift Card",
+    "growth.purchase.listing2805.title": "Purchase a $25 Google Play Gift Card",
+    "growth.purchase.listing2806.title": "Purchase a $25 Walmart Gift Card",
+    "growth.purchase.listing2808.title": "Purchase a $25 Target Gift Card",
+    "growth.purchase.listing2809.title": "Purchase a $25 Uber Gift Card",
+    "growth.purchase.empty.details": ""
   },
   "2hr27C": "Bán một danh sách",
   "4rFkyn": "Invite Friends to Join Origin",
@@ -840,21 +877,16 @@
   "gLVF0": "Cài đặt",
   "1lZQR5": "Cài đặt",
   "m1nCP": "Language",
-  "1F3Mvq": "Vui lòng lựa chọn từ danh sách dưới đây.",
+  "1Auy56": "Please make a selection from the list.",
   "3P1oz6": "Currency",
   "4BuhN1": "Please make a selection from the list below.",
-  "3p4HGb": "Browser Notifications",
-  "cbWZ9": "Kích hoạt thông báo trình duyệt bên dưới.",
-  "2s8fOg": "Kích hoạt",
-  "2ajQKU": "Thông báo trình duyệt được bật.",
-  "23S1SF": "Máy chủ Discovery",
-  "fYa5D": "Vui lòng nhập URL dưới đây. Để trống để truy vấn trực tiếp blockchain. Chức năng tìm kiếm sẽ bị vô hiệu hóa nếu không có máy chủ khám phá nào được sử dụng.",
+  "14qo1j": "Developer Mode",
+  "2utOAN": "Provides more granular control over your experience.",
   "2eOaM3": "Cổng IPFS",
-  "2uOnid": "Vui lòng nhập URL dưới đây.",
-  "41yLzv": "Nhà cung cấp Web3",
-  "3cw205": "Vui lòng nhập URL dưới đây.",
+  "1UUFlW": "Ethereum Node",
   "38WM0A": "Máy chủ cầu nối",
-  "14EHcW": "Vui lòng nhập URL dưới đây.",
+  "23S1SF": "Máy chủ Discovery",
+  "nqaAu": "Relayer Server",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
